--- a/2D_webApp/index.html
+++ b/2D_webApp/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiplayer Game</title>
-    <link rel="stylesheet" href="/styles.css" type="text/css">
-</head>
-<body>
-    
-    <div class="game-container"> </div>
+    <link rel="stylesheet" href="/styles.css" type="text/css" />
+  </head>
+  <body>
+    <div class="game-container"></div>
 
     <div class="player-info">
       <div>
@@ -19,9 +18,12 @@
       <div>
         <button id="player-color">Change Color</button>
       </div>
+      <div class="description">
+        <div class="center">
+          <div class="thirteen">Z-Space</div>
+        </div>
+      </div>
     </div>
-
-
 
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
@@ -30,17 +32,18 @@
       const firebaseConfig = {
         apiKey: "AIzaSyD6r4Imp6niFdf4w-YGFdInzVAUKOpGWvc",
         authDomain: "multiplayer-game-0203.firebaseapp.com",
-        databaseURL: "https://multiplayer-game-0203-default-rtdb.firebaseio.com",
+        databaseURL:
+          "https://multiplayer-game-0203-default-rtdb.firebaseio.com",
         projectId: "multiplayer-game-0203",
         storageBucket: "multiplayer-game-0203.appspot.com",
         messagingSenderId: "74265101148",
         appId: "1:74265101148:web:76052c92dcf6b8329b3799",
-        measurementId: "G-3NZR0L9R80"
+        measurementId: "G-3NZR0L9R80",
       };
       firebase.initializeApp(firebaseConfig);
     </script>
-    
+
     <script src="/KeyPressListener.js"></script>
     <script src="/app.js"></script>
-</body>
+  </body>
 </html>
